I have tried to implement tailwindcss but gave up and came back to plain css; forgive me css!

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
-/* @import "./fonts.css"; */
+/* @import "../src/styles/fonts.css";
+@import "../src/styles/theme.css";
+@import "tailwindcss"; */
 
 /* Reset & Base Styles */
 * {
